<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CarePatch</string>
    <string name="string_measure">Measuring</string>
    <string name="string_measure_report">Report</string>
    <string name="string_healthy_tips">Healthy Tips</string>
    <string name="string_profile_manage">Your Profile</string>
    <string name="string_message_center">Message Center</string>
    <string name="string_setting_title">Settings</string>
    <string name="string_input_your_username">please input your username</string>
    <string name="string_click_refresh">Refresh</string>
    <string name="string_help">Help</string>
    <string name="string_help_text">CarePatch lack of permissions.\n\nPlease click\"Settings\"-\"Permissions\"-Open the required permissions.</string>
    <string name="string_quit">Logout</string>
    <string name="string_settings">Settings</string>
    <string name="string_login">Login</string>
    <string name="string_login_or">OR</string>
    <string name="string_regist">Regist</string>
    <string name="string_slogon">Tech·Health·Care</string>
    <string name="string_company">Hangzhou Proton Technology Co., Ltd.</string>
    <string name="string_copyright">Copyright© 2016 ProtonTek. All rights reserved.</string>
    <string name="string_input_your_phone">Please input your phone</string>
    <string name="string_input_your_email">Email Address</string>
    <string name="string_input_password">password</string>
    <string name="string_forgot_pwd">Forgot password?</string>
    <string name="string_no_account_go_to_regist">Don\'t have an account yet? Click to register</string>
    <string name="string_no_net">No internet, please check the network</string>
    <string name="string_phone_can_not_be_null">Phone number cannot be empty</string>
    <string name="string_password_can_not_be_null">password can not be empty</string>
    <string name="string_parse_data_failed">Parsing data failed, please try again later</string>
    <string name="string_please_login_again">Your account has been logged in on another device, please login again</string>
    <string name="string_please_check_your_network">Please check the network</string>
    <string name="string_logining">Logging in</string>
    <string name="string_login_success">Login Success</string>
    <string name="string_regist_warm_1" />
    <string name="string_privacy_policy" />
    <string name="string_services_agreement" />
    <string name="string_and" />
    <string name="string_please_input_pwd">password</string>
    <string name="string_please_input_code">please enter verification code</string>
    <string name="string_has_account_go_to_login">Already have an account? Go to login</string>
    <string name="string_click_send_code">Send verification code</string>
    <string name="string_phone_not_correct">Phone number format is incorrect</string>
    <string name="string_email_not_correct">Please enter a valid email address</string>
    <string name="string_get_code_success">The verification code has been sent, please check it.</string>
    <string name="string_registing">Registing</string>
    <string name="string_code_can_not_be_null">verification code must be filled</string>
    <string name="string_temp_unit">Temp. Unit</string>
    <string name="string_msg_set">Notifications</string>
    <string name="string_clear_cache">Clear Cache</string>
    <string name="string_bluetooth_device_manage">Your Patch</string>
    <string name="string_about_proton">About Us</string>
    <string name="string_userqq_group">Customer Service</string>
    <string name="string_feedback">Feedback</string>
    <string name="string_temp_C">℃</string>
    <string name="string_temp_F">℉</string>
    <string name="string_connect_interrupt">Disconnection Alert</string>
    <string name="string_high_temp_notify">High Temp. Alert</string>
    <string name="string_low_temp_notify">Low Temp. Alert</string>
    <string name="string_device_lowpower_notify">Low Power Alert</string>
    <string name="string_time_duration_notify">Reminder Interval</string>
    <string name="string_the_bell_remind">Bell Remind</string>
    <string name="string_name">Name</string>
    <string name="string_latest_use">Recently Used</string>
    <string name="string_serial_number">Serial Number</string>
    <string name="string_version_code">Firmware Version</string>
    <string name="string_hardware_update">Firmware Upgrade</string>
    <string name="string_device_detail">Device Detail</string>
    <string name="string_hardware_version">Firmware Version</string>
    <string name="string_no_update">No Upgrade</string>
    <string name="string_update_content">Update content</string>
    <string name="string_device_update">Firmware Upgrade</string>
    <string name="string_delete">Delete</string>
    <string name="string_all">All</string>
    <string name="string_collect">Mark</string>
    <string name="string_no_qq">The version Q is not installed or the installed version is not supported</string>
    <string name="string_day">d</string>
    <string name="string_hour">h</string>
    <string name="string_minutes">m</string>
    <string name="string_seconds">s</string>
    <string name="string_not_normal_temp">Abnormal</string>
    <string name="string_normal">Normal</string>
    <string name="string_low_fever">Slight Fever</string>
    <string name="string_middle_fever">Fever</string>
    <string name="string_high_fever">High Fever</string>
    <string name="string_filemanage">Your Profile</string>
    <string name="string_new_file">Add</string>
    <string name="string_report">Report</string>
    <string name="string_edit">Edit</string>
    <string name="string_findpwd_filltip">Follow the steps to \nretrieve your account</string>
    <string name="string_input_code">Enter confirmation code</string>
    <string name="string_invalid_phonenum">Invalid mobile number</string>
    <string name="string_invalid_pwd">Password must be 6 or more</string>
    <string name="string_logo_text">Tech·Health·Care</string>
    <string name="string_we_do">Help People More Healthy</string>
    <string name="about_proton">\t\t\tHangzhou Proton Technology Co., Ltd. is an Internet company focusing on wearable intelligent health monitoring equipment. It was founded on Sep. 2015, located at East Software Park (Hangzhou, Zhejiang).</string>
    <string name="about_proton2">\t\t\tOur research and development team includes experts, masters and ph.D from Zhejiang University, who have a store of experience in research and development and also master the most cutting-edge technologies in the world. </string>
    <string name="string_version_tip">Version:   %s</string>
    <string name="string_contact_us">Contact Us：contact@protontek.com</string>
    <string name="string_pwd_reset_loading">Password resetting </string>
    <string name="string_pwd_reset_faild">Password reset failed</string>
    <string name="string_smscode_validate_error">SMS verification code error</string>
    <string name="string_to_protontek">To: Protontek</string>
    <string name="string_my_suggestions_tip">Here are my suggestions.</string>
    <string name="string_feedback_nobeauty">Interface design is not good enough.</string>
    <plurals name="string_sui">
        <item quantity="zero">%d year old</item>
        <item quantity="one">%d year old</item>
        <item quantity="other">%d years old</item>
    </plurals>
    <string name="string_click_use">Connect</string>
    <string name="string_start_measure">Start</string>
    <string name="string_app_bugs">There are bugs in the system.</string>
    <string name="string_unsatisfy_product">Not satisfied with the patch.</string>
    <string name="string_feedback_tip">Please write down your suggestion.</string>
    <string name="string_send">Send</string>
    <string name="string_say_something">Please enter the details</string>
    <string name="string_feedback_success">Succeed</string>
    <string name="string_his_name">Baby\'s name</string>
    <string name="string_boy">Male</string>
    <string name="string_girl">Female</string>
    <string name="string_birth_date">Baby’s birthday</string>
    <string name="string_add_profile">Add a New Profile</string>
    <string name="string_set_avatar">Edit Photo</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_name_profile_tip">Please enter baby\'s name</string>
    <string name="string_choose_birthday">Please choose baby\'s birthday</string>
    <string name="string_profile_add">Profile created!</string>
    <string name="string_rescan">Re-search</string>
    <string name="string_searching">Searching</string>
    <string name="string_connected">Connected</string>
    <string name="string_connecting">Connecting</string>
    <string name="string_finish">Done</string>
    <string name="string_choose_birthday_title">Birthday</string>
    <string name="string_year">Y</string>
    <string name="string_month">M</string>
    <string name="day">D</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="string_title_delete_profile">Delete Profile</string>
    <string name="string_delete_profile_msg">Are you sure you want to delete this profile?\nYou can\'t undo this action.</string>
    <string name="string_confirm">Done</string>
    <string name="string_confirm2">Done</string>
    <string name="string_go_to_add_new_profile">No profile yet. Go and add one!</string>
    <string name="string_profile_edit">Edit Profile</string>
    <string name="string_avatar">Photo</string>
    <string name="string_real_name">Name</string>
    <string name="string_sex">Gender</string>
    <string name="string_birthday_tip">Birthday</string>
    <string name="string_profile_codeid">Profile ID</string>
    <string name="id_wechat_share_profilecode">说明：可通过档案ID绑定微信公众号，方便查看宝宝实时体温；当宝宝发烧时，公众号会第一时间发出报警提示。 操作步骤：关注“质子科技”公众号，点击菜单栏中“绑定档案”，输入档案ID，即可完成绑定；点击“查看体温”，即可查看宝宝的当前体温数据。</string>
    <string name="string_input_name_tip">The name cannot be blank</string>
    <string name="string_save">Save</string>
    <string name="string_submit_data">Uploading...</string>
    <string name="string_copy_success">Copy Success</string>
    <string name="string_no_moredata">No more data</string>
    <string name="string_new_device">New Patch</string>
    <string name="string_add_new_device">Add new Patch</string>
    <string name="string_delete_report_tip">Are you sure you want to delete the selected reports? You can\'t undo this action.</string>
    <string name="string_share">Share</string>
    <string name="string_report_collect_tip">Marked</string>
    <string name="string_report_collect_success">Marked!</string>
    <string name="string_report_collect_failed">Failed! Please try again!</string>
    <string name="string_report_cancelCollect_success">Canceled!</string>
    <string name="string_report_cancelCollect_failed">Failed! Please try again!</string>
    <string name="string_note">Notes</string>
    <string name="string_note_tip">CarePatch tips</string>
    <string name="string_add_note">New Notes</string>
    <string name="string_drug_therapy">Medication</string>
    <string name="string_physical_therapy">Physical Cooling</string>
    <string name="string_i_konw">I Know</string>
    <string name="string_patch_power_tip">May need to wait for several seconds, please keep the bluetooth on</string>
    <string name="string_connecting_wifi">Connecting...</string>
    <string name="string_register_email_tip">The email address you sign up\nis your login account</string>
    <string name="string_experience_now">Try it now</string>
    <string name="string_wifi_support_explain">· Do not support 5GHz Wi-Fi\n please use 2.4GHz Wi-Fi</string>
    <string name="string_wifi_support">· Generally, “-5G”denotes 5Ghz Wi-Fi</string>
    <string name="string_put_phone_near_charge">Put the phone close to the charger</string>
</resources>