<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/warm_tip"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_wifi_support_explain"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="@dimen/pd15"
        android:layout_marginRight="@dimen/pd15"
        android:textSize="@dimen/sp16"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_wifi_support"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="@dimen/pd15"
        android:layout_marginRight="@dimen/pd15"
        android:textSize="@dimen/sp16"
        />


    <Button
        android:id="@+id/id_btn_konw"
        style="@style/MyBtnStyle"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_radius20_blue30_fill"
        android:text="@string/string_i_konw"/>


</LinearLayout>