<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/id_include_abount_proton"
            layout="@layout/include_top_navigation"/>

        <ScrollView
            android:id="@+id/id_about_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/string_logo_text"
                    android:textColor="@color/color_blue_30"
                    android:textSize="27sp"/>

                <TextView
                    style="@style/style_14sp_gray7f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_we_do"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/img_about_proton"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="4dp"
                    android:paddingTop="16dp"
                    android:text="@string/about_proton"
                    android:textColor="#7f7f7f"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/about_proton2"
                    android:textColor="#7f7f7f"/>

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@color/color_blue_4f"/>

                <TextView
                    android:id="@+id/id_tv_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="16dp"
                    android:text="@string/string_version_tip"/>

                <TextView
                    android:id="@+id/id_tv_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_radius4dp_stroke7f"
                    android:paddingBottom="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="8dp"
                    android:text="@string/string_contact_us"
                    android:textColor="#333333"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_company"
                    android:textColor="#7f7f7f"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/string_copyright"
                    android:textColor="#7f7f7f"
                    android:textSize="10sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>