<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.proton.runbear.viewmodel.user.InternationalLoginViewModel"/>

        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>

    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".activity.user.RegistInternationnalActivity">

        <include layout="@layout/include_top_navigation"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/id_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="209dp"
                    android:layout_height="63dp"
                    android:src="@drawable/proton"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_register_email_tip"
                    android:layout_gravity="center_horizontal"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginTop="22dp"
                    android:textSize="@dimen/sp16"
                    android:textColor="#7f7f7f"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_regist_warm_1"
                        android:textColor="#7f7f7f"
                        android:textSize="@dimen/sp14"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_main"
                        android:text="@string/string_privacy_policy"
                        android:onClick="@{()->viewModel.showPrivicy()}"
                        android:textSize="@dimen/sp14"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_and"
                        android:textSize="@dimen/sp14"
                        android:textColor="#7f7f7f"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_services_agreement"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/sp14"
                        android:onClick="@{()->viewModel.showUserAgreement()}"
                        />

                </LinearLayout>


                <EditText
                    style="@style/EditStyle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/pd20"
                    android:drawableLeft="@drawable/email"
                    android:hint="@string/string_input_your_email"
                    android:maxLines="1"
                    android:text="@={viewModel.email}"
                    />

                <EditText
                    style="@style/EditStyle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/pd20"
                    android:drawableLeft="@drawable/pwd_img"
                    android:hint="@string/string_please_input_pwd"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:text="@={viewModel.pwdNum}"
                    />


                <Space
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/id_btn_finish"
                        style="@style/MyBtnStyle"
                        android:layout_width="220dp"
                        android:layout_height="@dimen/btn_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/main_gradient_radius"
                        android:onClick="@{()->viewModel.senRegistEmailCode(true)}"
                        android:text="@string/string_regist"
                        android:textColor="#fff"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:onClick="@{()-> viewModel.goToRegisterInternational()}"
                        android:text="@string/string_has_account_go_to_login"
                        android:textColor="@drawable/text_color_selector"
                        android:padding="10dp"
                        android:textSize="14sp"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>



    </LinearLayout>

</layout>

