<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/include_top_navigation"/>

        <TextView
            android:id="@+id/id_tv_connectSuccess"
            style="@style/style_26sp_blue30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/string_connecting_wifi"/>

        <TextView
            android:id="@+id/id_tv_connectSuccess_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/string_put_phone_near_charge"
            android:textColor="@color/color_blue_30"
            android:textSize="16sp"
            android:visibility="visible"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/id_sdv_patchwifi"
            android:layout_width="285dp"
            android:layout_height="140dp"
            android:layout_marginTop="78dp"
            android:src="@drawable/gif_patch_power"/>

        <TextView
            android:id="@+id/id_docker_mac_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/style_14sp_gray33"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/id_btn_finish"
                style="@style/MyBtnStyle"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="26dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/shape_radius20_grayd7_fill"
                android:enabled="false"
                android:text="@string/string_experience_now"/>

            <TextView
                android:id="@+id/id_tv_connecting_tip"
                style="@style/style_14sp_gray33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/id_btn_finish"
                android:layout_marginBottom="19dp"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="44dp"
                android:gravity="center"
                android:text="@string/string_patch_power_tip"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</layout>